# haskell-starter

./: .gitignore  Katas.hs  README.md  hie.yaml  katas.cabal
.devcontainer/: Dockerfile  devcontainer.json
