cabal-version:       2.4
name:                katas
version:             0.0.0.1
license:             NONE
author:              Stefan Boos
maintainer:          kontakt@boos.systems

library
  build-depends:       QuickCheck,
                       hspec,
                       base,
                       containers,
                       parallel,
                       sqlite-simple,
                       text,
                       polysemy, polysemy-plugin


  -- hs-source-dirs:
  default-language:    Haskell2010

  exposed-modules: Katas
